--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -10,10 +10,47 @@
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <link rel="stylesheet"  th:href="@{/css/style.css}"/>
+
+    <title th:text="${title}">base.html</title>
 </head>
 <body>
-<h1>Hello, world!</h1>
+
+   <!--navbar start-->
+
+   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+       <a class="navbar-brand" href="#">Smart Contact Manager</a>
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+       </button>
+
+       <div class="collapse navbar-collapse" id="navbarSupportedContent">
+           <ul class="navbar-nav ml-auto text-uppercase">
+               <li class="nav-item active">
+                   <a th:href="@{/}" class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+               </li>
+               <li class="nav-item">
+                   <a class="nav-link" th:href="@{/about}" href="#">About</a>
+               </li>
+
+
+
+               <li class="nav-item">
+                   <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Login</a>
+               </li>
+
+               <li class="nav-item">
+                   <a class="nav-link" th:href="@{/signup}" href="#" tabindex="-1" aria-disabled="true">Signup</a>
+               </li>
+           </ul>
+
+       </div>
+   </nav>
+
+
+   <!--End of the navbar-->
+
+
 
 <div th:replace="${content}"></div>
 
@@ -28,5 +65,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+
+   <script th:src="@{/js/script.js}"></script>
+
 </body>
 </html>
