--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -10,22 +10,74 @@
 <section>
     <div class="container">
         <div class="row">
-             <div class="col-md-8 offset-md-2">
+             <div class="col-md-6 offset-md-3">
 
-                 <div class="my-card">
+                 <div class="my-card mt-1">
+                     <div class="container text-center">
+
+                     <img style="width:80px;" src="" th:src="@{../css/img/membership.png}" alt="">
+                     </div>
+
                  <h1 class="text-center">Register Here!!</h1>
 
-                     <form action="" th:action="@{/do_register}" method="post">
+                     <form action="" th:action="@{/do_register}" method="post" th:object="${user}">
 
                          <!--name-field-->
 
                          <div class="form-group">
                              <label for="name_field">Your Name</label>
-                             <input type="email" class="form-control"
-                                    id="name_field" aria-describedby="emailHelp" placeholder="Enter Here">
+                             <input name="name" type="text" class="form-control"
+                                    id="name_field" aria-describedby="emailHelp"
+                                    placeholder="Enter Here" required th:value="${user.name}"/>
 
                          </div>
 
+                         <!--email-field-->
+
+                         <div class="form-group">
+                             <label for="email_field">Your Email</label>
+                             <input name="email" type="email" class="form-control"
+                                    id="email_field" aria-describedby="emailHelp"
+                                    placeholder="Enter Email" required th:value="${user.email}"/>
+
+                         </div>
+
+                         <!--password-->
+
+                         <div class="form-group">
+                             <label for="password_field">Password</label>
+                             <input name="password" type="password" class="form-control"
+                                    id="password_field" aria-describedby="emailHelp"
+                                    placeholder="Enter password" required/>
+
+                         </div>
+
+
+                         <!--user about field-->
+                         <div class="form-group">
+                             <textarea th:value="${user.about}" placeholder="Enter something yourself" rows="5"
+                                       class="form-control" name="about"></textarea >
+
+                         </div>
+
+                         <!--Terms and Condition agreement-->
+
+                         <div class="form-group form-check text-center">
+                             <input type="checkbox" name="agreement" class="form-check-input" id="agreement"/>
+                             <label for="agreement">Accept terms and conditions</label>
+                         </div>
+
+
+                         <div class="container text-center">
+                             <button type="submit" class="btn bg-primary text-white">
+                                 Submit
+                             </button>
+
+                             <button type="reset" class="btn btn-warning">
+                                 Reset
+                             </button>
+
+                         </div>
 
                      </form>
 
