--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -12,8 +12,38 @@
         <div class="row">
              <div class="col-md-6 offset-md-3">
 
-                 <div class="my-card mt-1">
-                     <div class="container text-center">
+               <div class="my-card mt-1">
+
+               <!--     <div th:if="${session.message}" th:classappend="${session.message.type}" class="alert" role="alert">
+                         <p class="text-center" th:text="${session.message.content}"></p>
+
+                         <th:block th:text="${#session.removeAttribute('message')}"></th:block>
+
+                     </div>
+                     -->
+
+                   <div th:if="${session.message}" th:classappend="${session.message.type}" class="alert" role="alert">
+                       <p class="text-center" th:text="${session.message.content}"></p>
+                   </div>
+
+                   <script th:inline="javascript">
+                       /*<![CDATA[*/
+                       setTimeout(function() {
+                           var alertBox = document.querySelector('.alert');
+                           if (alertBox) {
+                               alertBox.style.display = 'none';
+                           }
+                       }, 3000);
+                       /*]]>*/
+                   </script>
+
+
+
+
+
+
+
+                   <div class="container text-center">
 
                      <img style="width:80px;" src="" th:src="@{../css/img/membership.png}" alt="">
                      </div>
@@ -27,8 +57,13 @@
                          <div class="form-group">
                              <label for="name_field">Your Name</label>
                              <input name="name" type="text" class="form-control"
+                                    th:classappend="${#fields.hasErrors('name') ? 'is-invalid':''}"
                                     id="name_field" aria-describedby="emailHelp"
                                     placeholder="Enter Here" required th:value="${user.name}"/>
+
+                             <div class="invalid-feedback" th:each="e:${#fields.errors('name')}" th:text="${e}">
+                                 Please provide a valid city.
+                             </div>
 
                          </div>
 
