--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -25,18 +25,104 @@ body{
   }
 
   #login .container #login-row #login-column #login-box {
-    margin-top: 120px;
+    margin-top: 80px;
     max-width: 600px;
-    height: 320px;
+    height: 390px;
     border: 1px solid #9C9C9C;
     background-color: #EAEAEA;
   }
   #login .container #login-row #login-column #login-box #login-form {
-    padding: 20px;
+    padding: 10px;
   }
   #login .container #login-row #login-column #login-box #login-form #register-link {
-    margin-top: -85px;
+    margin-top: -70px;
   }
+
+  /* sidebar */
+
+  .sidebar{
+  width: 18%;
+  background: white;
+  height: 100%;
+  position: fixed;
+  padding-top:45px;
+  }
+
+  .sidebar a{
+  display:block;
+  width:100%;
+  padding:10px 25px;
+  text-decoration:none;
+  color:gray;
+  }
+
+  .sidebar a:hover{
+  background:#e2e2e2;
+
+  }
+
+  .sidebar .divider{
+  height: .5px;
+  width:100%;
+  background:#e2e2e2;
+  margin-top:10px;
+
+  }
+
+
+  @media only screen and (max-width:600px){
+  .sidebar{
+   display:none;
+    width: 80% ! important;
+    background: white;
+    height: 100%;
+    position: fixed;
+    padding-top:45px;
+
+    }
+     .content{
+      margin-left:0%! important;
+
+      }
+
+
+  }
+
+  .content{
+  margin-left:20%;
+
+
+  }
+
+
+  .sidebar .crossBtn{
+  position:absolute;
+  top:0;
+  right:35px;
+  font-size:36px;
+  cursor:pointer;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
