--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:fragment="layout(content)">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:fragment="layout(content)" xmlns="http://www.w3.org/1999/html">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous">
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+          integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+           crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
+
 
     <link rel="stylesheet"  th:href="@{/css/style.css}"/>
 
@@ -29,18 +37,15 @@
                <li class="nav-item active">
                    <a th:href="@{/}" class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                </li>
-               <li class="nav-item">
-                   <a class="nav-link" th:href="@{/about}" href="#">About</a>
-               </li>
-
 
 
                <li class="nav-item">
-                   <a class="nav-link" th:href="@{/user/index}" tabindex="-1" aria-disabled="true">Login</a>
+                   <a class="nav-link" th:href="@{/user/index}" tabindex="-1" aria-disabled="true"><span th:text
+                   ="${user.name}"></span></a>
                </li>
 
                <li class="nav-item">
-                   <a class="nav-link" th:href="@{/signup}" href="#" tabindex="-1" aria-disabled="true">Signup</a>
+                   <a class="nav-link" th:href="@{/logout}" href="#" tabindex="-1" aria-disabled="true">Logout</a>
                </li>
            </ul>
 
@@ -50,12 +55,41 @@
 
    <!--End of the navbar-->
 
+   <!--start sidebar-->
+
+  <div class="sidebar">
+      <span onclick="toggleSidebar()" class="crossBtn">&times;</span>
+
+      <a href="#" class="item"><i class="fa-solid fa-house-chimney"></i> Home</a>
+      <a href="#" class="item"><i class="fa-solid fa-id-card-clip"></i> View Contacts</a>
+      <a href="#" class="item"><i class="fa-solid fa-pencil"></i> Your Contact</a>
+      <a href="#" class="item"><i class="fa-solid fa-user"></i> Your profile</a>
+      <a href="#" class="item"><i class="fa-solid fa-gear"></i> Settings</a>
+      <a href="#" class="item"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
+      <div class="divider"></div>
 
 
-<div th:replace="${content}"></div>
+  </div>
+
+   <!--End sidebar-->
+
+   <!--content area-->
+   <div class="content">
+
+       <i onclick="toggleSidebar()" class="fas fa-bars m-3"></i>
+   <div th:replace="${content}"></div>
+
+   </div>
+
+
+  <!--End content area-->
+
+
+
+
 
 <!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+   <!-- jQuery (Required for Bootstrap and JS functions) -->
    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
            integrity="sha384-oP3ng4xYTA5A1KZn9PBh59NFJwHl00VhVXZUbd3j9IUOEh02Jg/4lFEhYOYFcwJ/"
            crossorigin="anonymous"></script>
@@ -69,7 +103,24 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
            integrity="sha384-rbsA6BneLXyLQGGgGx6j9WWuUJ8UpL7PpbbRb7lqS6GoPjI3zUcLrU6GJdAKHCgD"
            crossorigin="anonymous"></script>script>
+
    <script th:src="@{/js/script.js}"></script>
+
+
+
+
+
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
