--- a/src/main/resources/templates/normal/user_dashboard.html
+++ b/src/main/resources/templates/normal/user_dashboard.html
@@ -1,12 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      th:replace="normal/base::layout(~{::section})">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dashboard</title>
+    <title>This is a home page</title>
 </head>
 <body>
-          <h1>Welcome your user Dashboard</h1>
-           <h2>This is your private dashboard</h2>
+<section>
+    <h1>This is private dashboard</h1>
+
+</section>
 </body>
 </html>
