--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -54,22 +54,10 @@
 
 <div th:replace="${content}"></div>
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-   <script src="https://code.jquery.com/jquery-3.6.4.min.js"
-           integrity="sha384-oP3ng4xYTA5A1KZn9PBh59NFJwHl00VhVXZUbd3j9IUOEh02Jg/4lFEhYOYFcwJ/"
+   <script
+           src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+           integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
            crossorigin="anonymous"></script>
-
-   <!-- Popper.js (Required for Bootstrap Tooltips & Popovers) -->
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.8/umd/popper.min.js"
-           integrity="sha384-rBS5s5rGJYtvx0Q+M6xxuIdE+XvYY9kz3o4xIhTKD0l4Kr1a+faeRJzA8cPwtEVD"
-           crossorigin="anonymous"></script>
-
-   <!-- Bootstrap JavaScript -->
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-           integrity="sha384-rbsA6BneLXyLQGGgGx6j9WWuUJ8UpL7PpbbRb7lqS6GoPjI3zUcLrU6GJdAKHCgD"
-           crossorigin="anonymous"></script>script>
-   <script th:src="@{/js/script.js}"></script>
 
 </body>
 </html>
