--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -11,6 +11,11 @@
           crossorigin="anonymous">
 
 
+    <script
+            src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
           integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
            crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -21,8 +26,19 @@
     <link rel="stylesheet"  th:href="@{/css/style.css}"/>
 
     <title th:text="${title}">base.html</title>
+
+
+
+
+
+
+
 </head>
 <body>
+
+
+    <script th:src="@{/js/script.js}"></script>
+
 
    <!--navbar start-->
 
@@ -62,10 +78,10 @@
 
       <a href="#" class="item"><i class="fa-solid fa-house-chimney"></i> Home</a>
       <a href="#" class="item"><i class="fa-solid fa-id-card-clip"></i> View Contacts</a>
-      <a href="#" class="item"><i class="fa-solid fa-pencil"></i> Your Contact</a>
+      <a href="#" th:href="@{/user/add-contact}" class="item"><i class="fa-solid fa-pencil"></i> Your Contact</a>
       <a href="#" class="item"><i class="fa-solid fa-user"></i> Your profile</a>
       <a href="#" class="item"><i class="fa-solid fa-gear"></i> Settings</a>
-      <a href="#" class="item"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
+      <a href="#" th:href="@{/logout}" class="item"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
       <div class="divider"></div>
 
 
@@ -76,8 +92,10 @@
    <!--content area-->
    <div class="content">
 
-       <i onclick="toggleSidebar()" class="fas fa-bars m-3"></i>
-   <div th:replace="${content}"></div>
+       <i class="fas fa-bars m-3" onclick="toggleSidebar()"></i>
+
+
+       <div th:replace="${content}"></div>
 
    </div>
 
@@ -87,24 +105,6 @@
 
 
 
-
-<!-- Optional JavaScript -->
-   <!-- jQuery (Required for Bootstrap and JS functions) -->
-   <script src="https://code.jquery.com/jquery-3.6.4.min.js"
-           integrity="sha384-oP3ng4xYTA5A1KZn9PBh59NFJwHl00VhVXZUbd3j9IUOEh02Jg/4lFEhYOYFcwJ/"
-           crossorigin="anonymous"></script>
-
-   <!-- Popper.js (Required for Bootstrap Tooltips & Popovers) -->
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.8/umd/popper.min.js"
-           integrity="sha384-rBS5s5rGJYtvx0Q+M6xxuIdE+XvYY9kz3o4xIhTKD0l4Kr1a+faeRJzA8cPwtEVD"
-           crossorigin="anonymous"></script>
-
-   <!-- Bootstrap JavaScript -->
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-           integrity="sha384-rbsA6BneLXyLQGGgGx6j9WWuUJ8UpL7PpbbRb7lqS6GoPjI3zUcLrU6GJdAKHCgD"
-           crossorigin="anonymous"></script>script>
-
-   <script th:src="@{/js/script.js}"></script>
 
 
 
